--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Open Source, Nachhaltigkeit und kreative Experimente – Projekte von Pappmann.">
   <meta property="og:title" content="Pappmann – Code & Bewusstsein">
   <meta property="og:description" content="Open Source, Nachhaltigkeit und kreative Experimente.">
-  <meta property="og:image" content="images/og-pappmann.png">
+  <meta property="og:image" content="images/og-image.png">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#6aa77c">
   <link rel="stylesheet" href="css/style.css">
@@ -17,13 +17,13 @@
 <body>
   <main>
     <section class="hero">
-      <img src="images/og-pappmann.png" alt="Pappmann" class="hero-image" />
+      <img src="images/og-image.png" alt="Pappmann" class="hero-image" />
       <h1>Pappmann</h1>
       <p class="tagline">Open Source · Nachhaltigkeit · Bewusstsein</p>
       <div class="links">
         <a href="https://github.com/Pappmann" target="_blank">GitHub</a>
         <a href="https://pappmann.github.io" target="_blank">Website</a>
-        <a href="mailto:kontakt@pappmann.de">Kontakt</a>
+        <a href="mailto:pappmann@pappmann.de">Kontakt</a>
       </div>
     </section>
 
