--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="links">
         <a href="https://github.com/Pappmann" target="_blank">GitHub</a>
         <a href="https://pappmann.github.io" target="_blank">Website</a>
-        <a href="mailto:pappmann@pappmann.de">Kontakt</a>
+        <a href="mailto:pappmann@pappmann.com">Kontakt</a>
       </div>
     </section>
 
