Update Page to wave edition

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pappmann – Code & Bewusstsein</title>
-  <meta name="description" content="Open Source, Nachhaltigkeit und kreative Experimente – Projekte von Pappmann.">
-  <meta property="og:title" content="Pappmann – Code & Bewusstsein">
+  <title>Pappmann - Code & Bewusstsein</title>
+  <meta name="description" content="Open Source, Nachhaltigkeit und kreative Experimente - Projekte von Pappmann.">
+  <meta property="og:title" content="Pappmann - Code & Bewusstsein">
   <meta property="og:description" content="Open Source, Nachhaltigkeit und kreative Experimente.">
-  <meta property="og:image" content="images/og-image.png">
+  <meta property="og:image" content="images/og-pappmann.png">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#6aa77c">
   <link rel="stylesheet" href="css/style.css">
@@ -15,14 +15,15 @@
 </head>
 
 <body>
+  <canvas id="waves"></canvas>
   <main>
     <section class="hero">
-      <img src="images/og-image.png" alt="Pappmann" class="hero-image" />
+      <img src="images/og-pappmann.png" alt="Pappmann" class="hero-image" />
       <h1>Pappmann</h1>
       <p class="tagline">Open Source · Nachhaltigkeit · Bewusstsein</p>
       <div class="links">
         <a href="https://github.com/Pappmann" target="_blank">GitHub</a>
-        <a href="https://pappmann.github.io" target="_blank">Website</a>
+        <a href="https://pappmann.com" target="_blank">Website</a>
         <a href="mailto:pappmann@pappmann.com">Kontakt</a>
       </div>
     </section>
@@ -30,15 +31,16 @@
     <section class="about">
       <h2>Über mich</h2>
       <p>
-        Ich bin Stephan Mikwauschk, bekannt als <strong>Pappmann</strong> – Entwickler zwischen Technik und Natur.
+        Ich bin Stephan Mikwauschk - Entwickler zwischen Technik und Natur.
         Meine Projekte verbinden Effizienz, Bewusstsein und Nachhaltigkeit. 
         Code soll nicht nur funktionieren, sondern Verständnis schaffen.
       </p>
     </section>
 
     <footer>
-      <p>© 2025 Pappmann – MIT oder CC0. | <a href="https://github.com/Pappmann">GitHub Repositories</a></p>
+      <p>© 2025 Pappmann - Open Source & CC0. | <a href="https://github.com/Pappmann">GitHub Repositories</a></p>
     </footer>
   </main>
+  <script src="js/waves.js"></script>
 </body>
 </html>
